--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -88,6 +88,16 @@
     "clients": "العملاء",
     "recent": "آخر العمليات"
   },
+  "settings": {
+    "defaultCurrency": "العملة الافتراضية",
+    "currencyHint": "تُستخدم في ملخص الحساب والتقارير"
+  },
+  "rates": {
+  "title": "أسعار الصرف",
+  "description": "تحديد أسعار تحويل العملات",
+"base": "العملة الأساسية:"
+}
+,
   "restore": {
     "title": "تم العثور على نسخة احتياطية",
     "message": "لا توجد بيانات محلية. هل تريد الاستعادة من السحابة؟",
