pusblish in app store version 1.0

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -86,7 +86,9 @@
     "income": "الدخل",
     "expense": "المصروف",
     "clients": "العملاء",
-    "recent": "آخر العمليات"
+    "recent": "آخر العمليات",
+     "topCreditors": "أكبر الدائنين",
+    "topDebtors": "أكبر المدينين"
   },
   "settings": {
     "defaultCurrency": "العملة الافتراضية",
